--- a/index.html
+++ b/index.html
@@ -10,6 +10,52 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
+    <header>
+        <nav>
+            <h1>DSViaCep</h1>
+            <div>Contato</div>
+        </nav>
+    </header>
+    <main>
+        <section id="form-section">
+                    <div>
+                        <form name="newAdress">
+                            <div>
+                                <label for="cep"> CEP:</label>
+                                <input name="cep" id="cep" type="text" placeholder="CEP">
+                            </div>
+                            <div>
+                                <label for="street"> Logradouro:</label>
+                                <input name="street" id="street" type="text" placeholder="Logradouro">
+                            </div>
+                            <div>
+                                <label for="number"> Numero:</label>
+                                <input name="number" id="number" type="text" placeholder="Numero">
+                            </div>
+                            <div>
+                                <label for="city"> Cidade:</label>
+                                <input name="city" id="city" type="text" placeholder="Cidade">
+                            </div>
+                        </form>
+                    </div>
+        </section>
+        <section id="list-section">
+            <div>
+                <h3>São Paulo</h3>
+                <p>Rua dos Jardins, 720</p>
+                <p>12945-673</p>
+            </div>
+            <div>
+                <h3>São Paulo</h3>
+                <p>Rua dos Jardins, 720</p>
+                <p>12945-673</p>
+            </div>
+            <div>
+                <h3>São Paulo</h3>
+                <p>Rua dos Jardins, 720</p>
+                <p>12945-673</p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
