--- a/index.html
+++ b/index.html
@@ -10,31 +10,37 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <h1>DSViaCep</h1>
-            <div>Contato</div>
+    <header class="header">
+        <nav class="nav-container">
+            <h1>DSViaCEP</h1>
+            <div class="contact-link">Contato</div>
         </nav>
     </header>
     <main>
         <section id="form-section">
-                    <div>
+                    <div class="form-container">
                         <form name="newAdress">
-                            <div>
+                            <div class="form-control">
                                 <label for="cep"> CEP:</label>
                                 <input name="cep" id="cep" type="text" placeholder="CEP">
                             </div>
-                            <div>
+                            <div class="form-control">
                                 <label for="street"> Logradouro:</label>
-                                <input name="street" id="street" type="text" placeholder="Logradouro">
+                                <input name="street" id="street" type="text" placeholder="Logradouro"  class="form-input" disabled>
                             </div>
-                            <div>
-                                <label for="number"> Numero:</label>
-                                <input name="number" id="number" type="text" placeholder="Numero">
+                            <div class="form-control">
+                                <label for="number"> Número:</label>
+                                <input name="number" id="number" type="text" placeholder="Número">
                             </div>
-                            <div>
+                            <div class="form-control">
                                 <label for="city"> Cidade:</label>
-                                <input name="city" id="city" type="text" placeholder="Cidade">
+                                <input name="city" id="city" type="text" placeholder="Cidade"  class="form-input" disabled>
+                            </div>
+                            <div class="btn-container">
+                                <button name="btnSave" class="btn btn-left" type="submit">
+                                    Salvar
+                                </button>
+                                <button name="btnClear" class="btn btn-right">Limpar</button>
                             </div>
                         </form>
                     </div>
