Finalize page styles

--- a/index.html
+++ b/index.html
@@ -46,22 +46,33 @@
                     </div>
         </section>
         <section id="list-section">
-            <div>
+            <div class="list-items">
                 <h3>São Paulo</h3>
-                <p>Rua dos Jardins, 720</p>
-                <p>12945-673</p>
+                <p class="street-line">Rua dos Jardins, 720</p>
+                <p class="address-cep">12945-673</p>
             </div>
-            <div>
+            <div class="list-items">
                 <h3>São Paulo</h3>
-                <p>Rua dos Jardins, 720</p>
-                <p>12945-673</p>
+                <p class="street-line">Rua dos Jardins, 720</p>
+                <p class="address-cep">12945-673</p>
             </div>
-            <div>
-                <h3>São Paulo</h3>
-                <p>Rua dos Jardins, 720</p>
-                <p>12945-673</p>
+        </section>
+        <section class="social-media-container">
+            <div class="social-media">
+                <a href="https://www.linkedin.com/in/rogerio-jr-dev/" target="_blank"><img src="src/img/linkedin.svg"></a>
+            </div>
+            <div class="social-media">
+                <a href="https://www.instagram.com/juniorbresilien/" target="_blank"><img src="src/img/instagram.svg"></a>
+            </div>
+            <div class="social-media">
+                <a href="https://github.com/rogerio-jr-dev" target="_blank"><img src="src/img/github.svg"></a>
+            </div>
+            <div class="social-media">
+                <a href="https://www.facebook.com/profile.php?id=61568797247481&locale=pt_BR%2F" target="_blank" ><img src="src/img/facebook.svg"></a>
             </div>
         </section>
     </main>
 </body>
 </html>
+
+
