Creating services and exceptions

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                                 <label for="cep"> CEP:</label>
                                 <input name="cep" id="cep" type="text" placeholder="CEP">
                             </div>
-                            <div class="mensage-error" data-error="cep">Campo requerido</div>
+                            <div class="mensage-error" data-error="cep"></div>
                             <div class="form-control">
                                 <label for="street"> Logradouro:</label>
                                 <input name="street" id="street" type="text" placeholder="Logradouro"  class="form-input" disabled>
@@ -33,7 +33,7 @@
                                 <label for="number"> Número:</label>
                                 <input name="number" id="number" type="text" placeholder="Número">
                             </div>
-                            <div class="mensage-error" data-error="number">Campo requerido</div>
+                            <div class="mensage-error" data-error="number"></div>
                             <div class="form-control">
                                 <label for="city"> Cidade:</label>
                                 <input name="city" id="city" type="text" placeholder="Cidade"  class="form-input" disabled>
