--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <section id="form-section">
                     <div class="form-container">
-                        <form name="newAdress">
+                        <form name="newAddress">
                             <div class="form-control">
                                 <label for="cep"> CEP:</label>
                                 <input name="cep" id="cep" type="text" placeholder="CEP">
@@ -42,22 +42,13 @@
                                 <button name="btnSave" class="btn btn-left" type="submit">
                                     Salvar
                                 </button>
-                                <button name="btnClear" class="btn btn-right">Limpar</button>
+                                <button name="btnClear"  type="button" class="btn btn-right">Limpar</button>
                             </div>
                         </form>
                     </div>
         </section>
-        <section id="list-section">
-            <div class="list-items">
-                <h3>São Paulo</h3>
-                <p class="street-line">Rua dos Jardins, 720</p>
-                <p class="address-cep">12945-673</p>
-            </div>
-            <div class="list-items">
-                <h3>São Paulo</h3>
-                <p class="street-line">Rua dos Jardins, 720</p>
-                <p class="address-cep">12945-673</p>
-            </div>
+        <section id="list-section" class="list-container">
+
         </section>
         <section class="social-media-container">
             <div class="social-media">
@@ -74,6 +65,15 @@
             </div>
         </section>
     </main>
+    <section id="modal-contact" class="modal-container">
+        <div class="modal-box">
+            <div class="modal-content">
+                <p>@juniorbresilien</p>
+            </div>
+            <button id="modal-contact-close" class="btn">Fechar</button>
+        </div>
+
+    </section>
 <script type="module" src="js/dsviacep.js"></script>
 </body>
 </html>
